--- a/playbook.ipynb
+++ b/playbook.ipynb
@@ -366,19 +366,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **weighted_sum** = 1 *if* w1x1 + w2x2 + b >= 0\n",
     "\n",
-    "\n",
-    "> weighted_sum = 1 if w1x1 + w2x2 + b >= 0\n",
-    "\n",
-    "> weighted_s0 if w1x1 + w2x2 + b < 0\n"
+    "> **weighted_sum** = 0 *if* w1x1 + w2x2 + b < 0\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linear Algebra"
+    "**Linear Algebra**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> x = [ [1,1,0] , [0,0,0] , [1,0,0] , [0,1,0] ]\n",
+    "\n",
+    "> b can be >= 0 or < 0 if all wnxn = 0\n",
+    "\n",
+    "> wx + b  if wnxn = 0\n",
+    "\n",
+    "> 2w + b  if wnxn = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -386,31 +415,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34,\n",
-       "       35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51,\n",
-       "       52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68,\n",
-       "       69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85,\n",
-       "       86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99])"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(1,100)"
-   ]
   },
   {
    "cell_type": "code",
@@ -442,7 +446,7 @@
     "\n",
     "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
     "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
-    "    output = linear_combination >= 0\n",
+    "    output = int(linear_combination >= 0)\n",
     "    is_correct_string = 'Yes' if output == correct_output else 'No'\n",
     "    outputs.append([test_input[0], test_input[1], linear_combination, output, is_correct_string])\n",
     "\n",
@@ -458,23 +462,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'relu' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-46-b2c7f205b28a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweight1\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mtest_input\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mweight2\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mtest_input\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbias\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'relu' is not defined"
+     "data": {
+      "text/plain": [
+       "[0, -1, -1, -2]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bias = []\n",
+    "w1,w2 = 1,1 \n",
+    "# 2w + b = 0\n",
+    "# b = +- 2w\n",
+    "for x1,x2 in zip([i[0]for i in test_inputs],[i[1] for i in test_inputs]):\n",
+    "    b = (w1 * x1) + (w2 * x2)\n",
+    "    if b >= 0 :\n",
+    "        bias.append(-b)\n",
+    "    else :\n",
+    "        bias.append(b)\n",
+    "bias        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight(w,b):\n",
+    "    linear_combination = []\n",
+    "    for x1,x2 in zip([i[0]for i in test_inputs],[i[1] for i in test_inputs]):\n",
+    "        linear_combination.append([(w * x1) + (w * x2) + b])\n",
+    "    return linear_combination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-2], [-2], [-2], [-2]]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight(0,-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight(w,x1,x2,b):\n",
+    "    return (w * x1) + (w * x2) + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "22\n",
+      "24\n",
+      "26\n",
+      "28\n",
+      "30\n",
+      "32\n",
+      "34\n",
+      "36\n",
+      "38\n",
+      "40\n",
+      "42\n",
+      "44\n",
+      "46\n",
+      "48\n",
+      "50\n",
+      "52\n",
+      "54\n",
+      "56\n",
+      "58\n",
+      "60\n",
+      "62\n",
+      "64\n",
+      "66\n",
+      "68\n",
+      "70\n",
+      "72\n",
+      "74\n",
+      "76\n",
+      "78\n",
+      "80\n",
+      "82\n",
+      "84\n",
+      "86\n",
+      "88\n",
+      "90\n",
+      "92\n",
+      "94\n",
+      "96\n",
+      "98\n",
+      "100\n",
+      "102\n",
+      "104\n",
+      "106\n",
+      "108\n",
+      "110\n",
+      "112\n",
+      "114\n",
+      "116\n",
+      "118\n",
+      "120\n",
+      "122\n",
+      "124\n",
+      "126\n",
+      "128\n",
+      "130\n",
+      "132\n",
+      "134\n",
+      "136\n",
+      "138\n",
+      "140\n",
+      "142\n",
+      "144\n",
+      "146\n",
+      "148\n",
+      "150\n",
+      "152\n",
+      "154\n",
+      "156\n",
+      "158\n",
+      "160\n",
+      "162\n",
+      "164\n",
+      "166\n",
+      "168\n",
+      "170\n",
+      "172\n",
+      "174\n",
+      "176\n",
+      "178\n",
+      "180\n",
+      "182\n",
+      "184\n",
+      "186\n",
+      "188\n",
+      "190\n",
+      "192\n",
+      "194\n",
+      "196\n"
      ]
     }
    ],
    "source": [
-    "relu(weight1 * test_input[0] + weight2 * test_input[1] + bias)"
+    "list_weights = np.arange(100)\n",
+    "for w in list_weights:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['True', 'True', 'True']\n",
+      "['True', 'True', 'True']\n",
+      "['True', 'True', 'True']\n",
+      "['True', 'True', 'True']\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_train = np.arange(1)\n",
+    "test_inputs = [(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+    "correct_outputs = [False, False, False, True]\n",
+    "for w in weight_train:\n",
+    "    for x in test_inputs:\n",
+    "        score = w*x[0] + w*x[1] - 2\n",
+    "        result = int(score >= 0)\n",
+    "        is_match = ['True' for c in correct_outputs if c == result]\n",
+    "        print(\"{} for \".format(is_match))\n",
+    "        \n",
+    "        \n",
+    "#     for o in correct_outputs:\n",
+    "#         print(i,o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in test_inputs:\n",
+    "    print(i[0],)"
    ]
   },
   {
@@ -522,215 +749,6 @@
     "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
     "    output = int(linear_combination >= 0)\n",
     "    print(linear_combination,output,correct_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-2\n",
-      "-1\n",
-      "-1\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
-    "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
-    "    print(linear_combination)\n",
-    "#     output = int(linear_combination >= 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "op = []\n",
-    "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
-    "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
-    "    output = int(linear_combination >= 0)\n",
-    "    is_correct_string = 'Yes' if output == correct_output else 'No'\n",
-    "    op.append([test_input[0], test_input[1], linear_combination, output, is_correct_string])\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0.0, 1, 'No'],\n",
-       " [0, 1, 0.0, 1, 'No'],\n",
-       " [1, 0, 0.0, 1, 'No'],\n",
-       " [1, 1, 0.0, 1, 'Yes']]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "op"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "weight1 = 0.0\n",
-    "weight2 = 0.0\n",
-    "bias = 0.0\n",
-    "test_inputs = [(0, 0), (0, 1), (1, 0), (1, 1)]\n",
-    "correct_outputs = [False, False, False, True]\n",
-    "outputs = []\n",
-    "ls = []\n",
-    "\n",
-    "\n",
-    "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
-    "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
-    "    output = int(linear_combination >= 0)\n",
-    "    is_correct_string = 'Yes' if output == correct_output else 'No'\n",
-    "    ls.append([test_input[0], test_input[1], linear_combination, output, is_correct_string])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0  1    2  3    4\n",
-       "0  0  0  0.0  1   No\n",
-       "1  0  1  0.0  1   No\n",
-       "2  1  0  0.0  1   No\n",
-       "3  1  1  0.0  1  Yes"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame(ls)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "K\n"
-     ]
-    }
-   ],
-   "source": [
-    "is_correct_string = 'Yes' for output in if output == correct_output else 'No'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2,)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array([1,2]).shape"
    ]
   },
   {
