--- a/playbook.ipynb
+++ b/playbook.ipynb
@@ -492,9 +492,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "x = {\n",
+    "    (0,0):[],\n",
+    "    (0,1):[],\n",
+    "    (1,0):[],\n",
+    "    (1,1):[]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[(0,0)].append(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[(0,0)].append(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): [2, True], (0, 1): [], (1, 0): [], (1, 1): []}"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-130-75fe28f0680d>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-130-75fe28f0680d>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    }\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def weight(w,b):\n",
     "    linear_combination = []\n",
@@ -505,22 +566,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_inputs = [(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+    "correct_outputs = [False, False, False, True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score(w,b):\n",
+    "    scores = []\n",
+    "    for x1,x2,correct_output in zip([x[0] for x in test_inputs],[x[1] for x in test_inputs],correct_outputs):\n",
+    "        weight_sum = (w * x1) + (w * x2)  + b\n",
+    "        output = weight_sum >= 0\n",
+    "        scores.append([x1,x2,output,correct_output])\n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[-2], [-2], [-2], [-2]]"
+       "[[0, 0, False, False],\n",
+       " [0, 1, False, False],\n",
+       " [1, 0, False, False],\n",
+       " [1, 1, True, True]]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weight(0,-2)"
+    "score(1,-1.5) # 1, -1.5 , -2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 False\n",
+      "0 1 False\n",
+      "1 0 False\n",
+      "1 1 True\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x1,x2,correct_output in zip([x[0] for x in test_inputs],[x[1] for x in test_inputs],correct_outputs):\n",
+    "    print(x1,x2,correct_output)"
    ]
   },
   {
@@ -535,120 +645,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-2\n",
-      "0\n",
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n",
-      "42\n",
-      "44\n",
-      "46\n",
-      "48\n",
-      "50\n",
-      "52\n",
-      "54\n",
-      "56\n",
-      "58\n",
-      "60\n",
-      "62\n",
-      "64\n",
-      "66\n",
-      "68\n",
-      "70\n",
-      "72\n",
-      "74\n",
-      "76\n",
-      "78\n",
-      "80\n",
-      "82\n",
-      "84\n",
-      "86\n",
-      "88\n",
-      "90\n",
-      "92\n",
-      "94\n",
-      "96\n",
-      "98\n",
-      "100\n",
-      "102\n",
-      "104\n",
-      "106\n",
-      "108\n",
-      "110\n",
-      "112\n",
-      "114\n",
-      "116\n",
-      "118\n",
-      "120\n",
-      "122\n",
-      "124\n",
-      "126\n",
-      "128\n",
-      "130\n",
-      "132\n",
-      "134\n",
-      "136\n",
-      "138\n",
-      "140\n",
-      "142\n",
-      "144\n",
-      "146\n",
-      "148\n",
-      "150\n",
-      "152\n",
-      "154\n",
-      "156\n",
-      "158\n",
-      "160\n",
-      "162\n",
-      "164\n",
-      "166\n",
-      "168\n",
-      "170\n",
-      "172\n",
-      "174\n",
-      "176\n",
-      "178\n",
-      "180\n",
-      "182\n",
-      "184\n",
-      "186\n",
-      "188\n",
-      "190\n",
-      "192\n",
-      "194\n",
-      "196\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[[0, 0, False, False],\n",
+       "  [0, 1, False, False],\n",
+       "  [1, 0, False, False],\n",
+       "  [1, 1, False, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, False, False],\n",
+       "  [1, 0, False, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]],\n",
+       " [[0, 0, False, False],\n",
+       "  [0, 1, True, False],\n",
+       "  [1, 0, True, False],\n",
+       "  [1, 1, True, True]]]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_weights = np.arange(100)\n",
+    "list_weights = np.arange(10)\n",
+    "result = []\n",
     "for w in list_weights:\n",
-    "    "
+    "    result.append(score(w,-2))\n",
+    "result\n"
    ]
   },
   {
