--- a/playbook.ipynb
+++ b/playbook.ipynb
@@ -840,85 +840,60 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Find **b** "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{-10: 20,\n",
-       " -9: 18,\n",
-       " -8: 16,\n",
-       " -7: 14,\n",
-       " -6: 12,\n",
-       " -5: 10,\n",
-       " -4: 8,\n",
-       " -3: 6,\n",
-       " -2: 4,\n",
-       " -1: 2,\n",
-       " 0: 0,\n",
-       " 1: -2,\n",
-       " 2: -4,\n",
-       " 3: -6,\n",
-       " 4: -8,\n",
-       " 5: -10,\n",
-       " 6: -12,\n",
-       " 7: -14,\n",
-       " 8: -16,\n",
-       " 9: -18,\n",
-       " 10: -20}"
+       "1.0"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bias = {}\n",
-    "\n",
-    "weights = np.arange(-10,11)\n",
-    "for w in weights:\n",
-    "    for x1,x2 in zip([i[0] for i in test_inputs],[i[1] for i in test_inputs]):\n",
-    "        b = -((w * x1) + (w * x2))\n",
-    "        if b >= 0\n",
-    "        bias[w] = b\n",
-    "bias"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Find **w** with b = -2"
+    "np.random.choice([-2,-1.5,-1,-0.5,0,0.5,1,1.5,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def score(w1,w2,b):\n",
+    "    scores = {}\n",
+    "    output = []\n",
+    "    for x1,x2 in zip([x[0] for x in test_inputs],[x[1] for x in test_inputs]):\n",
+    "        weight_sum = (w1 * x1) + (w2 * x2)  + b\n",
+    "        op = weight_sum >= 0\n",
+    "        output.append(op)\n",
+    "        scores[w1,w2,b] = output\n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{3: [True, True, True, True]}"
+       "{(0.5, -1.5, 0.0): [True, False, True, False]}"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score(3,0)"
+    "score(np.random.choice([-2,-1.5,-1,-0.5,0,0.5,1,1.5,2]),np.random.choice([-2,-1.5,-1,-0.5,0,0.5,1,1.5,2]),np.random.choice([-2,-1.5,-1,-0.5,0,0.5,1,1.5,2]))"
    ]
   },
   {
@@ -928,138 +903,6 @@
    "outputs": [],
    "source": [
     "correct_outputs = [True, False, True, False]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = []\n",
-    "for i in np.arange(100):\n",
-    "    result.append(score(np.random.randint(-100,100),0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "89 not fit\n",
-      "51 not fit\n",
-      "-22 not fit\n",
-      "-90 not fit\n",
-      "-27 not fit\n",
-      "-71 not fit\n",
-      "67 not fit\n",
-      "-95 not fit\n",
-      "99 not fit\n",
-      "52 not fit\n",
-      "48 not fit\n",
-      "-3 not fit\n",
-      "4 not fit\n",
-      "40 not fit\n",
-      "-24 not fit\n",
-      "84 not fit\n",
-      "70 not fit\n",
-      "-9 not fit\n",
-      "-29 not fit\n",
-      "73 not fit\n",
-      "-24 not fit\n",
-      "7 not fit\n",
-      "-83 not fit\n",
-      "70 not fit\n",
-      "-55 not fit\n",
-      "-67 not fit\n",
-      "9 not fit\n",
-      "-53 not fit\n",
-      "-44 not fit\n",
-      "18 not fit\n",
-      "27 not fit\n",
-      "-48 not fit\n",
-      "11 not fit\n",
-      "75 not fit\n",
-      "-22 not fit\n",
-      "90 not fit\n",
-      "-75 not fit\n",
-      "84 not fit\n",
-      "69 not fit\n",
-      "57 not fit\n",
-      "80 not fit\n",
-      "-24 not fit\n",
-      "-30 not fit\n",
-      "3 not fit\n",
-      "-39 not fit\n",
-      "14 not fit\n",
-      "-26 not fit\n",
-      "-97 not fit\n",
-      "68 not fit\n",
-      "-82 not fit\n",
-      "-12 not fit\n",
-      "11 not fit\n",
-      "-50 not fit\n",
-      "-58 not fit\n",
-      "58 not fit\n",
-      "-5 not fit\n",
-      "-18 not fit\n",
-      "-28 not fit\n",
-      "95 not fit\n",
-      "-20 not fit\n",
-      "-70 not fit\n",
-      "-81 not fit\n",
-      "-1 not fit\n",
-      "10 not fit\n",
-      "60 not fit\n",
-      "-47 not fit\n",
-      "-4 not fit\n",
-      "92 not fit\n",
-      "47 not fit\n",
-      "45 not fit\n",
-      "59 not fit\n",
-      "51 not fit\n",
-      "72 not fit\n",
-      "14 not fit\n",
-      "-85 not fit\n",
-      "-33 not fit\n",
-      "64 not fit\n",
-      "25 not fit\n",
-      "81 not fit\n",
-      "52 not fit\n",
-      "81 not fit\n",
-      "48 not fit\n",
-      "-30 not fit\n",
-      "-36 not fit\n",
-      "26 not fit\n",
-      "59 not fit\n",
-      "93 not fit\n",
-      "91 not fit\n",
-      "-52 not fit\n",
-      "-65 not fit\n",
-      "-96 not fit\n",
-      "81 not fit\n",
-      "85 not fit\n",
-      "29 not fit\n",
-      "-27 not fit\n",
-      "-95 not fit\n",
-      "76 not fit\n",
-      "95 not fit\n",
-      "-24 not fit\n",
-      "-11 not fit\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in result:\n",
-    "    for k,v in i.items():\n",
-    "        if v == correct_outputs:\n",
-    "            print(\"The ideal w: {}\".format(k))\n",
-    "        else:\n",
-    "            print(\"{} not fit\".format(k))"
    ]
   },
   {
